# haskellbook

./: chapter01.hs  chapter02.hs  lambdacalc.txt
chapter03/: String1.hs  String2.hs  StringFlip.hs
chapter04/: Numbers.hs
chapter05/: TypeKwon.hs
chapter06/: TypeKwon.hs
chapter07/: Arith4.hs  Funcy.hs  Guards.hs  HigherOrder.hs  Lambdas.hs  Patterns.hs
chapter08/: Bottom.hs  NumberToWord.hs  Recursion.hs
chapter09/: Cipher.hs  Filtering.hs  Lists.hs
chapter10/: Database.hs  Exercises.hs  Folding.hs  Scanning.hs
chapter11/: AsPatterns.hs  Cipher2.hs  Construct.hs  DaPhone.hs  Deconstruct.hs  Doggies.hs  Exercises.hs  Hutton.hs  Jammin.hs  NormalForm.hs  Polymorphic.hs  Records.hs  Tree.hs  Types.hs  Vehicles.hs
chapter12/: Exercises.hs  MaybeEither.hs  Unfold.hs
chapter13/: Cipher3.hs  Palindrome.hs  Person.hs
chapter14/: Addition.hs  Arbitrary.hs  addition.cabal
chapter3/: GlobalLocal.hs  Lists.hs  Reverse.hs  String3.hs
chapter4/: MakeTypes.hs  Stringies.hs  Tuples.hs
chapter5/: Sing.hs  Types.hs
chapter6/: Eqs.hs  Numberish.hs  NumberishBroken.hs  TypeCheck.hs
hangman/: hangman.cabal
hangman/src/: Main.hs
