name:                hangman
version:             0.1.0.0
synopsis:            Hangman game from haskell book
description:         Please see README.md
homepage:            https://github.com/txels/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Carles Barrobés
maintainer:          carles@barrobes.com
copyright:           2016 Carles Barrobés
category:            Game
build-type:          Simple
extra-source-files:  data/dict.txt
cabal-version:       >=1.10

executable hangman
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5
                     , random
                     , split
  default-language:    Haskell2010
